--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -1,43 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout>
+
     <data>
-        <variable name="userBean" type="com.taonce.myjetpack.data.binding.UserBean"/>
-        <variable name="otherName" type="String"/>
+
+        <variable
+            name="userBean"
+            type="com.taonce.myjetpack.data.binding.UserBean" />
+
+        <variable
+            name="otherName"
+            type="String" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".data.binding.DataBindingActivity">
+
+        <TextView
+            android:id="@+id/tv_first"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".data.binding.DataBindingActivity">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{userBean.firstName}"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/tv_first"
-                  android:text="@{userBean.firstName}"
-                  android:textSize="20sp"
-                  android:gravity="center"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintLeft_toLeftOf="parent"/>
+        <TextView
+            android:id="@+id/tv_last"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text='@{"/" + userBean}'
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_first" />
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/tv_last"
-                  android:text="@{userBean.lastName + otherName}"
-                  android:textSize="20sp"
-                  android:gravity="center"
-                  app:layout_constraintLeft_toLeftOf="parent"
-                  app:layout_constraintTop_toBottomOf="@id/tv_first"/>
-
-        <FrameLayout android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:id="@+id/frame_layout"
-                     app:layout_constraintLeft_toLeftOf="parent"
-                     app:layout_constraintTop_toBottomOf="@id/tv_last"
-                     app:layout_constraintBottom_toBottomOf="parent"/>
+        <FrameLayout
+            android:id="@+id/frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_last" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
