--- a/app/src/main/res/layout/activity_expression.xml
+++ b/app/src/main/res/layout/activity_expression.xml
@@ -44,8 +44,7 @@
                   android:padding="10dp"
                   android:id="@+id/tv_three"
                   app:layout_constraintTop_toBottomOf="@id/tv_two"
-                  android:text="@{ageThan20}"
-                  android:visibility="@{age > 20 ? view.VISIBLE : view.GONE}"/>
+                  android:text="@{ageThan20}"/>
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -54,8 +53,7 @@
                   android:padding="10dp"
                   android:id="@+id/tv_four"
                   app:layout_constraintTop_toBottomOf="@id/tv_two"
-                  android:text="@{ageLess20}"
-                  android:visibility="@{age &lt; 20 ? view.VISIBLE : view.GONE}"/>
+                  android:text="@{ageLess20}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
